--- a/bin/application/application.css
+++ b/bin/application/application.css
@@ -1,1 +1,3 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+  .text-area .content{
+      -fx-background-color: white;
+  }
