--- a/src/application/AddMovie.fxml
+++ b/src/application/AddMovie.fxml
@@ -27,6 +27,6 @@
       <TextArea fx:id="txtDescription" layoutX="166.0" layoutY="192.0" prefHeight="140.0" prefWidth="149.0" />
       <Label fx:id="lblMsg" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="3.0" layoutY="339.0" prefHeight="17.0" prefWidth="500.0" />
       <Button fx:id="btnSubmit" layoutX="274.0" layoutY="361.0" mnemonicParsing="false" onAction="#Submit" text="Submit" />
-      <Button fx:id="btnCancel" layoutX="167.0" layoutY="361.0" mnemonicParsing="false" onAction="#Cancel" text="Cancel" />
+      <Button fx:id="btnCancel" layoutX="167.0" layoutY="361.0" mnemonicParsing="false" onAction="#Cancel" text="Back" />
    </children>
 </AnchorPane>
