--- a/src/application/Customer.fxml
+++ b/src/application/Customer.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400" prefWidth="500" xmlns="http://javafx.com/javafx/8.0.41" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CustomerController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400" prefWidth="500" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CustomerController">
    <top>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -15,6 +15,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
+            <Button fx:id="btnBook" layoutX="266.0" layoutY="122.0" mnemonicParsing="false" onAction="#launchBookMovie" text="Book Movie" />
          </children>
       </AnchorPane>
    </top>
