--- a/src/application/Screen.fxml
+++ b/src/application/Screen.fxml
@@ -174,6 +174,8 @@
                               <Font size="25.0" />
                            </font>
                         </Label>
+                        <Button fx:id="btnConfirm" layoutX="220.0" layoutY="340.0" mnemonicParsing="false" onAction="#confirm" text="Confirm" visible="false" />
+                        <Label fx:id="lblMsg" alignment="CENTER" layoutX="-2.0" layoutY="317.0" prefHeight="17.0" prefWidth="500.0" textFill="#fff9f9" />
                      </children></AnchorPane>
             </content>
           </Tab>
